--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
-*.toc
-*.synctex.gz
 *.aux
+*.bbl
+*.blg
+*.idx
+*.ind
+*.lof
+*.lot
+*.out
+*.toc
+*.acn
+*.acr
+*.alg
+*.glg
+*.glo
+*.gls
+*.ist
+*.fls
+*.gz
+*.hs
+*.nav
+*.snm
+*.hd
 *.log
-*.dvi
+*.fdb_latexmk
